// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Heading Colors 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="color-base size-md weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-primary size-md weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-inverted size-md weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
</div>
`;

exports[`Storyshots Atoms/Heading Default 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="color-base size-md weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
</div>
`;

exports[`Storyshots Atoms/Heading Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="color-base size-xs weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-base size-sm weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-base size-md weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-base size-lg weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-base size-xl weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-base size-2xl weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
</div>
`;

exports[`Storyshots Atoms/Heading Weights 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="color-base size-md weight-normal heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
  <header
    className="color-base size-md weight-bold heading"
  >
    Consent doubt TuckBorleje challeng destroying
  </header>
</div>
`;
